fix: scroll on iOS

--- a/components/ui/Chat/Scroll/Scroll.less
+++ b/components/ui/Chat/Scroll/Scroll.less
@@ -14,8 +14,6 @@
 }
 
 .auto-scroll {
-  display: flex;
-  flex-direction: column-reverse;
   overflow-y: auto;
   overflow-x: hidden;
   height: 100%;
